--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
 	"files.associations": {
 		"readline.h": "c",
-		"stdio.h": "c"
+		"stdio.h": "c",
+		"minishell.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
