exit function improved and done.

--- a/include/libft/Makefile
+++ b/include/libft/Makefile
@@ -3,7 +3,7 @@ NAME			= libft.a
 AR				= ar rcs
 RM				= rm -f
 CC				= cc
-CFLAGS			= -Wall -Wextra -Werror -g3
+CFLAGS			= -Wall -Wextra -Werror
 CFLAGS			+= -I ./
 
 SRCS_DIR		= ./srcs/
